--- a/juego/index.html
+++ b/juego/index.html
@@ -12,6 +12,7 @@
   <link rel="icon" href="Favicon.png">
   <link href="https://code.ionicframework.com/1.0.0-beta.6/css/ionic.css" rel="stylesheet">
   <link href="css/popup.css" rel="stylesheet">
+  <link href="css/boton.css" rel="stylesheet">
 
   <script src="js/juego.js"></script>
   <script src="js/popup.js"></script>
@@ -36,14 +37,14 @@
             <div class="clear"></div>
             <div id="resultado"></div>
             <div id="opciones">
-              <input type="button" name="elemento" id="piedra" value="Piedra" onclick="comprobar('piedra')">
-              <input type="button" name="elemento" id="papel" value="Papel" onclick="comprobar('papel')">
-              <input type="button" name="elemento" id="tijera" value="Tijera" onclick="comprobar('tijera')">
-              <input type="button" name="elemento" id="lagarto" value="Lagarto" onclick="comprobar('lagarto')">
-              <input type="button" name="elemento" id="spock" value="Spock" onclick="comprobar('spock')">
+              <img src="piedra.png" alt="" width="100" height="100" id="piedra" value="Piedra" onclick="comprobar('piedra')">
+              <img src="papel.png" alt="" width="100" height="100" id="papel" value="Papel" onclick="comprobar('papel')">
+              <img src="tijeras.png" alt="" width="100" height="100" id="tijera" value="Tijera" onclick="comprobar('tijera')">
+              <img src="lagarto.png" alt="" width="100" height="100" id="lagarto" value="Lagarto" onclick="comprobar('lagarto')">
+              <img src="spock.png" alt="" width="100" height="100" id="spock" value="Spock" onclick="comprobar('spock')">
             </div>
-            <button id="botonResetear" onclick="resetearPartida()">
-              BORRAR
+            <button id="botonResetear" class="button is-large is-success is-rounded" onclick="resetearPartida()">
+              RESET
             </button>
 
             <p id="texto"></p>
