--- a/juego/index.html
+++ b/juego/index.html
@@ -47,12 +47,14 @@
               RESET
             </button>
 
-            <p id="texto"></p>
+            <p class ="tittle is-1" id="texto"></p>
     </section>
 
     <div id="puntos">
+      <h1 id="jugadorpuntos">Jugador</h1>
       <div id="puntosJugador">
       </div>
+      <h1 id="maquinapuntos">Maquina</h1>
       <div id="puntosMaquina">
       </div>
     </div>
