--- a/juego/index.html
+++ b/juego/index.html
@@ -29,7 +29,7 @@
           <div class="column">
             <div class="level">
               <div class="level-item">
-                <figure class="image is-128x128"><img class="is-rounded" src="piedra-papel-tijeras-lagarto-spock.jpg"
+                <figure class="image is-128x128"><img class="is-rounded" src="imagenes/piedra-papel-tijeras-lagarto-spock.jpg"
                     alt=""></figure>
               </div>
             </div>
@@ -37,11 +37,11 @@
             <div class="clear"></div>
             <div id="resultado"></div>
             <div id="opciones">
-              <img src="piedra.png" alt="" width="100" height="100" id="piedra" value="Piedra" onclick="comprobar('piedra')">
-              <img src="papel.png" alt="" width="100" height="100" id="papel" value="Papel" onclick="comprobar('papel')">
-              <img src="tijeras.png" alt="" width="100" height="100" id="tijera" value="Tijera" onclick="comprobar('tijera')">
-              <img src="lagarto.png" alt="" width="100" height="100" id="lagarto" value="Lagarto" onclick="comprobar('lagarto')">
-              <img src="spock.png" alt="" width="100" height="100" id="spock" value="Spock" onclick="comprobar('spock')">
+              <img src="imagenes/piedra.png" alt="" width="100" height="100" id="piedra" value="Piedra" onclick="comprobar('piedra')">
+              <img src="imagenes/papel.png" alt="" width="100" height="100" id="papel" value="Papel" onclick="comprobar('papel')">
+              <img src="imagenes/tijeras.png" alt="" width="100" height="100" id="tijera" value="Tijera" onclick="comprobar('tijera')">
+              <img src="imagenes/lagarto.png" alt="" width="100" height="100" id="lagarto" value="Lagarto" onclick="comprobar('lagarto')">
+              <img src="imagenes/spock.png" alt="" width="100" height="100" id="spock" value="Spock" onclick="comprobar('spock')">
             </div>
             <button id="botonResetear" class="button is-large is-success is-rounded" onclick="resetearPartida()">
               RESET
